--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <title>{{title}}</title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
         <style>
                 .error {
                     color: red;
@@ -86,16 +85,41 @@
                     font-size:300%;
                     color:black;
                     font-weight: 200;
-                    text-align: center;
+                    
                 }
                 h4 {
                     text-align:center;
                     font-size:200;
                     color:black;
                     font-weight: 200;
-                    text-align: center;
+                    
+                }
+                h5 {
+                    text-align:left;
+                    font-size:200;
+                    font-weight: 200;
                 }
                 
+               
+                
+                legend {
+                    text-align:left;
+                    font-size:200;
+                    color:black;
+                    font-weight: 200;
+                }
+
+                td {
+                    font-size:200;
+                    color:black;
+                    font-weight: 200;
+                }
+                .checkbox{
+                    font-size:75%;
+                    color:black;
+                    font-weight: 200;
+                }
+
                 label {
                     font-size:100%;
                     font-weight: 200;
