create user, login, log out, add-residence, search, results, user posts, single post, index, thankyou and welcome pages all fully functional, need to enable submission of blank fields to db

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
+<a href="{{url_for('search')}}">Search placeBook</a><br>
 
         <form method='POST'>
             <table>
                 <tbody>
                         <div id="bannerimage4"></div>
                     <h1>log in.//connect//</h1>
+                    <span class="error">{{error}}</span>
                     <tr>
                         <td>
                             <label for='username'>Username</label>
