--- a/templates/create.html
+++ b/templates/create.html
@@ -5,8 +5,10 @@
             <table>
                 <tbody>
                     <div id="bannerimage3"></div>
-                    
+                    <a href="{{url_for('search')}}">Search placeBook</a><br>
                     <h1>sign up. //help// your community.</h1>
+                    
+
                     <tr>
                         <td>
                             <label for='username'>Username</label>
