--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -1,13 +1,14 @@
-
 {% extends "base.html" %}
 {% block content %}
-    
+<body>    
         <div id="bannerimage5"></div> 
         <a href="{{url_for('search')}}">Search placeBook</a><br>
+        <a href="{{url_for('add')}}">Add a rental rating to placeBook</a><br>
         <a href="{{url_for('logout')}}">Log out</a><br>
-        <h3>//share// your experience.</h3>
-        
-        
+        <h3>//edit// your review.</h3>
+      
+
+
         <form method='POST'>
                 <table>
                     <tbody>
@@ -163,9 +164,11 @@
                     </tbody>
                 </table>
                 <label for='comment'>Describe your experience.</label>
-                <textarea id='comment' cols="50" rows="4" name='comment'></textarea>
+                <textarea id='comment' cols="50" rows="4" name='comment' value={{comment}}></textarea>
                 <span class="error">{{comment_error}}</span>
                 <input type="submit" value="Submit"/>
                 <img class="center" src="https://i.imgur.com/4jEezu7.png" alt="pb logo"/>  
-            </form>  
+            </form> 
+
+</body>
 {% endblock %}
