change rating search to be > instead of =, fix problem with blank checkbox submissions

--- a/templates/add-residence.html
+++ b/templates/add-residence.html
@@ -101,40 +101,50 @@
                         </tr>
                         <tr>
                             <td>
+                                <input type="hidden" name="amenities" id="laundry-in-unit" value="0"/>
                                 <input type="checkbox" name="amenities" id="laundry-in-unit" value="laundry-in-unit"/><label class="checkbox" for="laundry-in-unit">Laundry in Unit</label>
                             </td>
                             <td>
+                                <input type="hidden" name="amenities" id="communal-laundry" value="0"/>
                                 <input type="checkbox" name="amenities" id="communal-laundry" value="communal-laundry"/><label class="checkbox" for="communal-laundry">Communal Laundry Facilities</label>
                             
                              </td>
                         </tr>
                         <tr>
                             <td>
+                                <input type="hidden" name="amenities" id="washing-machine" value="0"/>    
                                 <input type="checkbox" name="amenities" id="washing-machine" value="washing-machine"/><label class="checkbox" for="washing-machine">Washing Machine</label>
                             <td>
-                                    <input type="checkbox" name="amenities" id="off-street-parking" value="off-street-parking"/><label class="checkbox" for="off-street-parking">Off-Street Parking</label>
+                                    <input type="hidden" name="amenities" id="off-street-parking" value="0"/>
+                                <input type="checkbox" name="amenities" id="off-street-parking" value="off-street-parking"/><label class="checkbox" for="off-street-parking">Off-Street Parking</label>
                         </tr>    
                         <tr>
                             <td>
+                                <input type="hidden" name="amenities" id="gym" value="0"/>
                                 <input type="checkbox" name="amenities" id="gym" value="gym"/><label class="checkbox" for="gym">Gym/Workout Facilities</label>
                             </td>
                             <td>
+                                <input type="hidden" name="amenities" id="swimming-pool" value="0"/>
                                 <input type="checkbox" name="amenities" id="swimming-pool" value="swimming-pool"/><label class="checkbox" for="swimming-pool">Swimming Pool</label>
                             </td>
                         </tr>
                         <tr>
                             <td>
+                                <input type="hidden" name="amenities" id="elevator" value="0"/>
                                 <input type="checkbox" name="amenities" id="elevator" value="elevator"/><label class="checkbox" for="elevator">Elevator</label>
                             </td>
                             <td>
+                                <input type="hidden" name="amenities" id="central-air" value="0"/>
                                 <input type="checkbox" name="amenities" id="central-air" value="central-air"/><label class="checkbox" for="central-air">Central Air</label>
                             </td>
                         </tr>     
                         <tr>
                             <td>
+                                <input type="hidden" name="amenities" id="refrigerator" value="0"/>
                                 <input type="checkbox" name="amenities" id="refrigerator" value="refrigerator"/><label class="checkbox" for="refrigerator">Refrigerator</label>
                             </td>
                             <td>
+                                <input type="hidden" name="amenities" id="google-fiber" value="0"/>
                                 <input type="checkbox" name="amenities" id="google-fiber" value="google-fiber"/><label class="checkbox" for="google-fiber">Google Fiber</label>
                             </td>
                         </tr> 
