add welcome page to allowed pages without login

--- a/templates/create.html
+++ b/templates/create.html
@@ -6,6 +6,9 @@
                 <tbody>
                     <div id="bannerimage3"></div>
                     <a href="{{url_for('search')}}">Search placeBook</a><br>
+                    <a href='/reviews?username={{session['username']}}'/> Review, edit, or delete your posts</a><br>
+                    <a href="{{url_for('logout')}}">Log out</a><br><br>
+
                     <h1>sign up. //help// your community.</h1>
                     
 
