--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -169,6 +169,7 @@
                 <input type="submit" value="Submit"/>
                 <img class="center" src="https://i.imgur.com/4jEezu7.png" alt="pb logo"/>  
             </form> 
+    <a href='/delete_post?id={{posts.id}}'>delete this post</a>
 
 </body>
 {% endblock %}
