--- a/templates/search.html
+++ b/templates/search.html
@@ -2,7 +2,7 @@
 {% block content %}
 <body>
         <div id="bannerimage5"></div> 
-        <a href='/reviews?username={{session['username']}}'>Click here to see your reviews.</a><br>
+        <a href='/reviews?username={{session['username']}}'>Review, edit, or delete your posts</a><br>
         <a href="{{url_for('add')}}">Add a rental rating to placeBook</a><br>
         <a href="{{url_for('logout')}}">Log out</a><br>
         <h3>//find// your new home.</h3>
