--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -2,8 +2,8 @@
 {% block content %}
             <div id="bannerimage2"></div> 
         <h4>Thanks for signing up, {{username}}...you rock! Now you can help other users learn from your experience!!</h4>
-        <a href="{{url_for('add')}}">Click here to add a rental rating to placeBook</a>
+        <a href="{{url_for('add')}}">Click here to add a rental rating to placeBook</a><br>
         <a href="{{url_for('search')}}">Search placeBook</a><br>
-        <a href="{{url_for('logout')}}">Log out</a>
+        <a href="{{url_for('logout')}}">Log out</a><br>
         <img class="center" src="https://i.imgur.com/4jEezu7.png" alt="pb logo"/>  
 {% endblock %}
