--- a/templates/add-residence.html
+++ b/templates/add-residence.html
@@ -3,23 +3,31 @@
 {% block content %}
     
         <div id="bannerimage5"></div> 
-        <a href="{{url_for('search')}}">Search placeBook</a><br>
+       
 
-        <a href="{{url_for('logout')}}">Log out</a><br>
+        
         <h3>//share// your experience.</h3>
         
-        
+        <script src="https://maps.googleapis.com/maps/api/js?key=APIKEY&libraries=places&callback=initAutocomplete"
+        async defer></script>
+        <div id="locationField">
+            <input id="autocomplete" placeholder="Enter your address"
+                   onFocus="geolocate()" type="text", class="wideField"> </input>
+        </div>
+        <br><br>
         <form method='POST'>
                 <table>
                     <tbody>
                         <tr>
                             <td>
-                                <label for='street'>Street Address</label>
+                                <label for='street_number'>Street Address</label>
                             </td>
                             <td>
-                                <input id="street", type="text" name='street', value='{{street}}' required/>
+                                <input id="street_number", type="text" name='street', value='{{street}}', class= "slimField", required, disabled="true"/>
                                 <span class = "error">{{street_error}}</span>
+                                <input id ="route", type="text", name = 'route', value = '{{route}}', disabled="true"/>
                             </td>
+                                
                         </tr>
                         <tr>
                             <td>
@@ -35,7 +43,7 @@
                                 <label for='city'>City</label>
                             </td>
                             <td>
-                                <input id="city", type="text" name='city', value='{{city}}' required/>
+                                <input id="locality", type="text" name='city', value='{{city}}', required, disabled="true"/>
                                 <span class = "error">{{city_error}}</span>
                             </td>
                         </tr>
@@ -44,7 +52,7 @@
                                 <label for='state'>State (e.g., MO)</label>
                             </td>
                             <td>
-                                <input id="state", type="text" name='state', value='{{state}}'required/>
+                                <input id="administrative_area_level_1", class="slimField", type="text" name='state', value='{{state}}',required/>
                                 <span class = "error">{{state_error}}</span>
                             </td>
                         </tr>
@@ -53,7 +61,7 @@
                                 <label for='zipcode'>Zip Code </label>
                             </td>
                             <td>
-                                <input id="zipcode", type="text" name='zipcode', value='{{zipcode}}'required/>
+                                <input id="postal_code", type="text" name='zipcode', value='{{zipcode}}', required/>
                                 <span class = "error">{{zip_error}}</span>
                             </td>
                         </tr>
@@ -113,8 +121,8 @@
                         </tr>
                         <tr>
                             <td>
-                                <input type="hidden" name="amenities" id="washing-machine" value="0"/>    
-                                <input type="checkbox" name="amenities" id="washing-machine" value="washing-machine"/><label class="checkbox" for="washing-machine">Washing Machine</label>
+                                <input type="hidden" name="amenities" id="dish-washer" value="0"/>    
+                                <input type="checkbox" name="amenities" id="dish-washer" value="dish-washer"/><label class="checkbox" for="dish-washer">Dish Washer</label>
                             <td>
                                     <input type="hidden" name="amenities" id="off-street-parking" value="0"/>
                                 <input type="checkbox" name="amenities" id="off-street-parking" value="off-street-parking"/><label class="checkbox" for="off-street-parking">Off-Street Parking</label>
@@ -173,10 +181,77 @@
                         </tr>
                     </tbody>
                 </table>
-                <label for='comment'>Describe your experience.</label>
+                <label for='comment'>Explain your rating.</label>
                 <textarea id='comment' cols="50" rows="4" name='comment'></textarea>
                 <span class="error">{{comment_error}}</span>
                 <input type="submit" value="Submit"/>
-                <img class="center" src="https://i.imgur.com/4jEezu7.png" alt="pb logo"/>  
-            </form>  
+               
+            </form> 
+            <script>
+                var placeSearch, autocomplete;
+                var componentForm = {
+                    street_number: 'short_name',
+                    route: 'long_name',
+                    locality: 'long_name',
+                    administrative_area_level_1: 'short_name',
+                    postal_code: 'short_name'
+                    };
+                    function initAutocomplete() {
+        // Create the autocomplete object, restricting the search to geographical
+        // location types.
+                autocomplete = new google.maps.places.Autocomplete(
+                    /** @type {!HTMLInputElement} */(document.getElementById('autocomplete')),
+                    {types: ['geocode']});
+
+                // When the user selects an address from the dropdown, populate the address
+                // fields in the form.
+                autocomplete.addListener('place_changed', fillInAddress);
+            }
+
+            function fillInAddress() {
+                // Get the place details from the autocomplete object.
+                var place = autocomplete.getPlace();
+
+                for (var component in componentForm) {
+                document.getElementById(component).value = '';
+                document.getElementById(component).disabled = false;
+                }
+
+                // Get each component of the address from the place details
+                // and fill the corresponding field on the form.
+                for (var i = 0; i < place.address_components.length; i++) {
+                var addressType = place.address_components[i].types[0];
+                if (componentForm[addressType]) {
+                    var val = place.address_components[i][componentForm[addressType]];
+                    document.getElementById(addressType).value = val;
+                }
+                }
+            }
+
+            // Bias the autocomplete object to the user's geographical location,
+            // as supplied by the browser's 'navigator.geolocation' object.
+            function geolocate() {
+                if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(function(position) {
+                    var geolocation = {
+                    lat: position.coords.latitude,
+                    lng: position.coords.longitude
+                    };
+                    var circle = new google.maps.Circle({
+                    center: geolocation,
+                    radius: position.coords.accuracy
+                    });
+                    autocomplete.setBounds(circle.getBounds());
+                });
+                }
+            }
+              </script> 
+              <br>
+               <img class="center" src="https://i.imgur.com/4jEezu7.png" alt="pb logo"/>
+               <p>
+                    <a href="{{url_for('search')}}">Search placeBook</a><br>
+                    <a href='/reviews?username={{session['username']}}'>Review, edit, or delete your posts</a><br>
+                    <a href="{{url_for('logout')}}">Log out</a><br>
+    
+            </p> 
 {% endblock %}
