--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,23 @@
                 html {
                    
                     font-family:Helvetica, Arial, sans-serif;
-                    padding:0;
+                    padding:5px;
                     border: 0;
                     margin:0;
+                }
+                .slimField {
+                    width: 80px;
+                }
+                .wideField {
+                    width: 480px;
+                }
+                .hidden {
+                    dislpay: none;
+                }
+
+                #locationField, #controls {
+                    position: relative;
+                    width: 480px;
                 }
                 #bannerimage {
                     width: 100%;
@@ -73,6 +87,17 @@
                     display: block;
                     margin: 0 auto; 
                 }
+                #description {
+                    text-align: left;
+                    width: 55%;
+                    padding-left: 25%
+
+
+                }
+                #map {
+                        height: 400px;
+                }
+            
                 
                 h1 {
                     text-align:center;
@@ -134,7 +159,8 @@
 
                 }
                 p {
-                    line-height: 75%;
+                    line-height: 100%;
+                    display:block;
                     margin: 0px;
                     font-weight: 200;
                     text-align: center;
@@ -167,7 +193,7 @@
                     border-collapse: collapse;
                     border-spacing: 0;
                 }
-                                }
+                                
         </style> 
     </head>
     <body>
