--- a/templates/single_post.html
+++ b/templates/single_post.html
@@ -1,24 +1,65 @@
 {% extends "base.html" %}
 {% block content %}
-<body>
-        <div id="bannerimage5"></div> 
+<body onload=codeAddress()>
+    
        
-       
+         
+   
+
+
+
         {% for post in posts %}
         
-        <h3>{{post.street}}</h3></a>
-        <p>
-        <i>{{post.street}},
+        <h3>{{post.street}} {{post.route}}</h3></a>
+        <div id="map"></div>
+           
+            <script>
+                var geocoder;
+                var map;
+                
+                function codeAddress(address) {
+                    geocoder = new google.maps.Geocoder();
+                    var address = document.getElementById('address').innerText;
+                    geocoder.geocode( { 'address': address}, function(results, status) {
+                    if (status == 'OK') {
+                        var mapOptions = {
+                            zoom: 17,
+                            center: (results[0].geometry.location)}
+                        
+                        map = new google.maps.Map(document.getElementById('map'), mapOptions);
+                        var marker = new google.maps.Marker({
+                            map: map,
+                            position: results[0].geometry.location
+                        })
+                        }
+                    })
+                };
+        
+            </script>
+
+     <script async defer
+     src="https://maps.googleapis.com/maps/api/js?key=APIKEY&callback=initMap"></script>
+        
+       
+        <br><br>
+        <p id="address">
+        <i>{{post.street}} {{post.route}},
         {{post.apt}}<br><br>
         {{post.city}}, {{post.state}}<br><br>
         {{post.zipcode}}<br></i><br><br>
+        
+        <p>
         <b>Type of residence: </b>{{post.residence}}<br><br>
         <b>Number of Bedrooms: </b>{{post.room_number}}<br><br>
         <b> Building Name: </b>{{post.building}}<br><br>
         <b>Featured Amenities: </b>{{post.amenities}}<br><br>
         <b>Property Managment: </b> {{post.management}}<br><br>
         <b>Rating: </b>{{post.rating}}<br><br>
-        <b>User description:</b> {{post.comment}}<br><br>
+        </p>
+        <p id='description'>
+            <b>Tenant description:</b> {{post.comment}}<br><br>
+            </p>
+        <p>
         
        
         
@@ -28,10 +69,12 @@
 
         </p>
         {% endfor %}
-
+        <img class="center" src="https://i.imgur.com/4jEezu7.png" alt="pb logo"/>  
+        <p>
         <a href="{{url_for('search')}}">New search</a><br>
         <a href="{{url_for('add')}}">Add a rental rating to placeBook</a>
         <a href="{{url_for('logout')}}">Log out</a>
+        </p>
     </body>
 
 {% endblock %}       
