--- a/placebook/templates/add-residence.html
+++ b/placebook/templates/add-residence.html
@@ -8,7 +8,7 @@
         
         <h3>//share// your experience.</h3>
         
-        <script src="https://maps.googleapis.com/maps/api/js?key=APIKEY&libraries=places&callback=initAutocomplete"
+        <script src="https://maps.googleapis.com/maps/api/js?key="+{{apiscript}}+"&libraries=places&callback=initAutocomplete"
         async defer></script>
         <div id="locationField">
             <input id="autocomplete" placeholder="Enter your address"
