flask inv and config complete

--- a/placebook/templates/base.html
+++ b/placebook/templates/base.html
@@ -21,7 +21,7 @@
                     width: 480px;
                 }
                 .hidden {
-                    dislpay: none;
+                    display: none;
                 }
 
                 #locationField, #controls {
@@ -88,7 +88,7 @@
                     margin: 0 auto; 
                 }
                 #description {
-                    text-align: left;
+                    text-align: center;
                     width: 55%;
                     padding-left: 25%
 
