--- a/placebook/templates/add-residence.html
+++ b/placebook/templates/add-residence.html
@@ -8,9 +8,10 @@
         
         <h3>//share// your experience.</h3>
         
-        <script src="https://maps.googleapis.com/maps/api/js?key="+{{apiscript}}+"&libraries=places&callback=initAutocomplete"
+        <script src="https://maps.googleapis.com/maps/api/js?key={{api}}&libraries=places&callback=initAutocomplete"
         async defer></script>
         <div id="locationField">
+                
             <input id="autocomplete" placeholder="Enter your address"
                    onFocus="geolocate()" type="text", class="wideField"> </input>
         </div>
