--- a/placebook/templates/single_post.html
+++ b/placebook/templates/single_post.html
@@ -38,7 +38,7 @@
             </script>
 
      <script async defer
-     src="https://maps.googleapis.com/maps/api/js?key=APIKEY&callback=initMap"></script>
+     src="https://maps.googleapis.com/maps/api/js?key={{api}}&callback=initMap"></script>
         
        
         <br><br>
